--- a/website/leaderboard.html
+++ b/website/leaderboard.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>sss (copy)</title>
+    <title>sss (copy) (copy)</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400|Roboto:300,400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400|Roboto:300,400,700">
@@ -24,7 +24,7 @@
                 <div class="container"><a class="navbar-brand text-success" href="#header"><i class="fa fa-leaf fa-2x"></i>&nbsp;KAILIAN</a><button data-bs-toggle="collapse" class="navbar-toggler collapsed" data-bs-target="#navcol-2"><span></span><span></span><span></span></button>
                     <div class="collapse navbar-collapse" id="navcol-2">
                         <ul class="navbar-nav ms-auto">
-                            <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="leaderboard.html">Leaderboard</a></li>
                             <li class="nav-item"><a class="nav-link" href="#">About us</a></li>
                             <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#">op</a>
@@ -35,13 +35,51 @@
                 </div>
             </nav>
             <div class="bg-success d-flex align-items-center" style="height: 100vh;background: radial-gradient(rgb(8,78,71) 0%, rgb(5,47,43) 100%), rgb(46,47,46);">
-                <div class="container col-xxl-8 px-4 py-5" style="width: 90%;">
-                    <div class="row flex-lg-row-reverse align-items-center g-5 py-5" style="color: var(--bs-white);width: 100%;">
-                        <div class="col-10 col-sm-8 col-lg-6"><img class="img-fluid d-block mx-lg-auto" data-aos="fade" data-aos-duration="900" src="assets/img/dsBMoDrTqHYi9brbVsFU--1--u20xx-removebg-preview.png" width="700" height="500" loading="lazy"></div>
-                        <div class="col-lg-6">
-                            <h1 data-aos="fade-right" data-aos-duration="800" data-aos-delay="150" class="display-5 fw-bold lh-1 mb-3">Darren Franz</h1>
-                            <p data-aos="fade-right" data-aos-duration="800" data-aos-delay="450" class="lead">Ai description asd asd a d</p>
-                            <div class="d-grid gap-2 d-md-flex justify-content-md-start"><button class="btn btn-light btn-lg text-uppercase border rounded shadow px-4 me-md-2" data-aos="fade-right" data-aos-duration="800" data-aos-delay="900" type="button" style="font-family: Roboto, sans-serif;font-weight: bold;color: var(--bs-gray-900);">Primary</button></div>
+                <div class="container">
+                    <h1 class="text-center text-light" data-aos="fade-down" data-aos-duration="950">Leaderboard</h1>
+                    <div class="row" data-aos="fade-down" data-aos-duration="950" data-aos-delay="300" style="margin: 1%;padding: 1%;">
+                        <div class="col">
+                            <div class="card">
+                                <div class="card-body">
+                                    <p class="card-text"><i class="fa fa-star"></i>&nbsp;1 Darren Franz 5000</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row" data-aos="fade-down" data-aos-duration="950" data-aos-delay="600" style="margin: 1%;padding: 1%;">
+                        <div class="col">
+                            <div class="card">
+                                <div class="card-body">
+                                    <p class="card-text">1 Darren Franz 5000<br></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row" data-aos="fade-down" data-aos-duration="950" data-aos-delay="900" style="margin: 1%;padding: 1%;">
+                        <div class="col">
+                            <div class="card">
+                                <div class="card-body">
+                                    <p class="card-text">&nbsp;1 Darren Franz 5000<br></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row" data-aos="fade-down" data-aos-duration="950" data-aos-delay="1200" style="margin: 1%;padding: 1%;">
+                        <div class="col">
+                            <div class="card">
+                                <div class="card-body">
+                                    <p class="card-text">1 Darren Franz 5000<br></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row" data-aos="fade-down" data-aos-duration="950" data-aos-delay="1500" style="margin: 1%;padding: 1%;">
+                        <div class="col">
+                            <div class="card">
+                                <div class="card-body">
+                                    <p class="card-text">1 Darren Franz 5000<br></p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
