--- a/website/aboutus.html
+++ b/website/aboutus.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>sss (copy) (copy)</title>
+    <title>sss (copy)</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400|Roboto:300,400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400|Roboto:300,400,700">
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/-Fixed-Navbar-start-with-transparency-background-BS4-.css">
     <link rel="stylesheet" href="assets/css/Button-Change-Text-on-Hover.css">
+    <link rel="stylesheet" href="assets/css/Footer-Basic.css">
+    <link rel="stylesheet" href="assets/css/Footer-with-social-media-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="stylesheet" href="assets/css/sticky-dark-top-nav-with-dropdown.css">
     <link rel="stylesheet" href="assets/css/styles.css">
@@ -36,56 +38,12 @@
             </nav>
             <div class="bg-success d-flex align-items-center" style="height: 100vh;background: radial-gradient(rgb(8,78,71) 0%, rgb(5,47,43) 100%), rgb(46,47,46);">
                 <div class="container">
-                    <h1 class="text-center text-light" data-aos="fade-down" data-aos-duration="950">Leaderboard</h1>
-                    <div class="row" data-aos="fade-down" data-aos-duration="950" data-aos-delay="300" style="margin: 1%;padding: 1%;">
-                        <div class="col">
-                            <div class="card">
-                                <div class="card-body">
-                                    <p class="card-text"><i class="fa fa-star"></i>&nbsp;1 Darren Franz 5000</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row" data-aos="fade-down" data-aos-duration="950" data-aos-delay="600" style="margin: 1%;padding: 1%;">
-                        <div class="col">
-                            <div class="card">
-                                <div class="card-body">
-                                    <p class="card-text">1 Darren Franz 5000<br></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row" data-aos="fade-down" data-aos-duration="950" data-aos-delay="900" style="margin: 1%;padding: 1%;">
-                        <div class="col">
-                            <div class="card">
-                                <div class="card-body">
-                                    <p class="card-text">&nbsp;1 Darren Franz 5000<br></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row" data-aos="fade-down" data-aos-duration="950" data-aos-delay="1200" style="margin: 1%;padding: 1%;">
-                        <div class="col">
-                            <div class="card">
-                                <div class="card-body">
-                                    <p class="card-text">1 Darren Franz 5000<br></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row" data-aos="fade-down" data-aos-duration="950" data-aos-delay="1500" style="margin: 1%;padding: 1%;">
-                        <div class="col">
-                            <div class="card">
-                                <div class="card-body">
-                                    <p class="card-text">1 Darren Franz 5000<br></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <h1 class="text-center text-white" data-aos="fade" data-aos-duration="1500">WHO WE ARE</h1>
+                    <p class="text-center text-white" data-aos="fade" data-aos-duration="1500" data-aos-delay="300" style="font-size: 22px;margin: 0px;margin-top: 50px;margin-right: 100px;margin-left: 100px;">We are a passionate team dedicated to creating innovative language learning solutions that empower users to effortlessly master the Ilocano language through our AI-powered platform<br></p>
                 </div>
+                <footer></footer>
             </div>
         </header>
-        <section class="py-5"></section>
     </div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
